--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
+* {
+    margin:0;
+    padding:0;
+}
+
 html h1, h2, h3, button, span, p, input, a {
     font-family:"Poppins", sans-serif;
     text-decoration:none;
 }
 
+a {
+    color:black;
+    text-decoration:underline;
+}
+
 body {
+    height:calc(100vh - 100px);
     margin:0;
-    background-color: rgb(241, 241, 241);
+    background-image: linear-gradient(rgb(241, 241, 241), rgb(226, 226, 226));
 }
 
 #divMain {
     margin:50px;
+    margin-bottom: 0px;
+    margin-top:100px;
     text-align:center;
 }
 
 #h1Legenda {
     color:rgb(88, 88, 255);
+    user-select: none;
 }
 
 #h1Palavra {
@@ -23,11 +37,28 @@ body {
     margin:0px;
 }
 
+.h1PalavraAnim {
+    animation: popup 0.7s;
+}
+
+@keyframes popup {
+    0% {
+        font-size:4.5vw;
+    }
+    50% {
+        font-size:4.8vw;
+    }
+    100% {
+        font-size:4.5vw;
+    }
+}
+
 #divMain p {
     margin-top:0px;
 }
 
 #divMain button {
+    user-select: none;
     margin-top:10px;
     font-size:20px;
     color:white;
@@ -38,10 +69,12 @@ body {
     background-color:rgb(88, 88, 255);
     border-style:none;
     border-radius:20px;
+    transition: transform 0.5s;
 }
 
 #divMain button:hover {
     cursor:pointer;
+    transform: scale(1.1)
 }
 
 #maisOp {
@@ -61,9 +94,25 @@ body {
 }
 
 #divLimita {
+    user-select: none;
     visibility:hidden;
     display:block;
     margin:0 auto;
+}
+
+.divLimitaAnim {
+    animation: aparecer 0.5s;
+}
+
+@keyframes aparecer {
+    from {
+        margin-top:-30px;
+        opacity:0;
+    }
+    to {
+        margin-top:0px;
+        opacity:1;
+    }
 }
 
 #divLimita p {
@@ -75,7 +124,7 @@ body {
     margin-top:25px;
     margin-bottom:10px;
     border-style:solid;
-    border-radius:20px;
+    border-radius:8px;
 }
 
 #limpa {
@@ -110,31 +159,37 @@ body {
     cursor:pointer;
 }
 
-#divFooter {
+footer {
+    display:flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    position:absolute;
-    bottom:0;
-    left:0;
-    width:100%;
-    padding-top: 20px;
-    padding-bottom: 30px;
-    margin-top:100%;
-    background-color: #d7d7d7;
 }
 
-#divFooter span {
-    color:rgb(0, 0, 0);
+.divContato {
+    user-select:none;
+    font-weight: bolder;
+    position:absolute;
+    text-align:center;
+    margin-bottom:10px;
+    bottom:0px;
+    color:rgb(52, 52, 52);
+    transition:transform 0.5s;
 }
 
-#divFooterBaixo {
-    text-align: center;
-    position:absolute;
-    bottom:0;
-    left:0;
-    width:100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color:#9b9b9b;
+.divContato:hover {
+    transform:scale(1.1)   
+}
+
+.divContato a {
+    text-decoration: none;
+    color:rgb(83, 83, 83);
+}
+
+.divContato span {
+    margin:5px;
+    text-decoration: underline;
+    color:rgb(83, 83, 83);
 }
 
 @media only screen and (max-width: 520px) {
